@@ -1,0 +1,12 @@
+<HTML>
+<BODY>
+Interfaces for SAML 2 Protocol Extension for Async Logout
+<p />
+Information on using this library can be found in the 
+<a href="https://wiki.shibboleth.net/confluence/display/SHIB/OSTwoUserManual">User's Manual</a> and information 
+on extending its functionality can be found in the 
+<a href="https://wiki.shibboleth.net/confluence/display/SHIB/OSTwoDeveloperManual">Developer's Manual</a>.
+
+@see <a href="https://wiki.shibboleth.net/confluence/display/SHIB/OpenSAML">OpenSAML Wiki</a>
+</BODY>
+</HTML>
